[package]
name = "rlbox_lucet_sandbox"
version = "0.1.0"
authors = ["shravanrn@gmail.com <shravanrn@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
failure = ">=0.1.3"                    # Experimental error handling abstraction.
goblin = ">=0.0.17"                    # An impish, cross-platform, ELF, Mach-o, and PE binary parsing and loading crate
lucet-wasi = { path = "../lucet-spectre/lucet-wasi" }
lucet-runtime = { path = "../lucet-spectre/lucet-runtime" }
lucet-runtime-internals = { path = "../lucet-spectre/lucet-runtime/lucet-runtime-internals" }
lucet-module = { path = "../lucet-spectre/lucet-module" }
anyhow = "1.0.31"

[lib]
name = "rlbox_lucet_sandbox"
crate-type = ["rlib", "staticlib"]